--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: ruby
 rvm:
-- 2.0
-- 2.1
 - 2.2
 notifications:
-  email:
-    on_success: never
-    on_failure: change
+  email: false
 sudo: false
 cache: bundler
+before_script: bundle update
+script: ./script/cibuild
